@@ -16,6 +16,10 @@
 	* d3d9types.h: Fix the D3DFMT_XXX constant declarations.
 	(wine git d4ca34dd9bf98ea71226460092c7095847b97509)
 	* d3d8types.h: Likewise.
+	* d3d.h: Fix method calling macros for IDirect3DTexture
+	(wine git e169bb0a7f204ebe0f3053d824a1177bc1dedc65) and
+	for IDirect3DViewport3_GetViewport (wine git 
+		  7c8fa9c24f5d6d4e22dec148ffecefc9a4262a27)
 
 2009-02-20  Kai Tietz  <kai.tietz@onevision.com>
 
